--- a/assignments/assignment3/Assignment_3.ipynb
+++ b/assignments/assignment3/Assignment_3.ipynb
@@ -284,6 +284,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "description"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -444,6 +451,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -470,6 +484,13 @@
    ],
    "source": [
     "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "outliars"
    ]
   },
   {
@@ -529,6 +550,13 @@
    ],
    "source": [
     "data.Height.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dependant and independant varibles"
    ]
   },
   {
@@ -756,6 +784,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "split data into train and test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -765,15 +800,6 @@
     "y = data.Rings \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Independent data is already scaled"
    ]
   },
   {
@@ -797,6 +823,13 @@
     "test = pd.concat([X_test, y_test], axis=1)\n",
     "\n",
     "list(map(lambda x:x.shape, [train, test]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model buliding, training and testing"
    ]
   },
   {
@@ -927,6 +960,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "performance using metrics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -948,18 +988,11 @@
     "\n",
     "r2_score(y_test, rfr_pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('nalaiyathiran-dsmgNv3K')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -973,12 +1006,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "58f52ee4f8d3cd522448127f04f3e00c2fb0f5848e93266c3917eae53a9df66d"
+    "hash": "2a8dfe095fce2b5e88c64a2c3ee084c8e0e0d70b23e7b95b1cfb538be294c5c8"
    }
   }
  },
