--- a/assignments/assignment2/Assignment_2.ipynb
+++ b/assignments/assignment2/Assignment_2.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -577,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### outliars"
+    "### outliers"
    ]
   },
   {
