--- a/assignments/assignment2/Assignment_2.ipynb
+++ b/assignments/assignment2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Name: CreditScore, Length: 460, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "<AxesSubplot: xlabel='Age', ylabel='Balance'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -299,24 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vpra\\AppData\\Local\\Temp\\ipykernel_13976\\3784163891.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-      "  sns.pairplot(data.corr())\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x17f8367f590>"
+       "<seaborn.axisgrid.PairGrid at 0x1f6e01eef90>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -332,7 +324,7 @@
     }
    ],
    "source": [
-    "sns.pairplot(data.corr())"
+    "sns.pairplot(data.corr(method = \"pearson\", numeric_only = True))"
    ]
   },
   {
@@ -344,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +522,7 @@
        "max      199992.480000      1.000000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +563,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +590,7 @@
        "<AxesSubplot: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -620,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +655,7 @@
        "[(4731, 2299), (1577, 2299)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
